{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 60,
  "lineage": "977f9b69-090c-d633-abec-9a8ff242d1fa",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-065aeacd44e98d9ac",
            "arn": "arn:aws:ec2:us-east-1:992382426073:instance/i-08b341486d50c02d1",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sdh",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "Name": "MyEBSVolume-0"
                },
                "tags_all": {
                  "Name": "MyEBSVolume-0"
                },
                "throughput": 0,
                "volume_id": "vol-062c12aaf5c4b05ea",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08b341486d50c02d1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0911a498af77c0518",
            "private_dns": "ip-10-0-1-95.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.95",
            "public_dns": "ec2-3-84-12-220.compute-1.amazonaws.com",
            "public_ip": "3.84.12.220",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f82b2e7d6d30f3f8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fde10caef6765bbb",
            "tags": {
              "Name": "WebServer-0"
            },
            "tags_all": {
              "Name": "WebServer-0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00fa8360e5aa9674c"
            ]
          },
          "dependencies": [
            "aws_security_group.example_sg",
            "aws_subnet.subnet_a",
            "aws_subnet.subnet_b",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-065aeacd44e98d9ac",
            "arn": "arn:aws:ec2:us-east-1:992382426073:instance/i-0d6c74acadf71ef0c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sdh",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "Name": "MyEBSVolume-1"
                },
                "tags_all": {
                  "Name": "MyEBSVolume-1"
                },
                "throughput": 0,
                "volume_id": "vol-0994bbe7723561510",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d6c74acadf71ef0c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f8a6463f5264af0b",
            "private_dns": "ip-10-0-2-149.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.149",
            "public_dns": "ec2-18-209-47-107.compute-1.amazonaws.com",
            "public_ip": "18.209.47.107",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0293785f62f2ba713",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03ec5277dda703ab1",
            "tags": {
              "Name": "WebServer-1"
            },
            "tags_all": {
              "Name": "WebServer-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00fa8360e5aa9674c"
            ]
          },
          "dependencies": [
            "aws_security_group.example_sg",
            "aws_subnet.subnet_a",
            "aws_subnet.subnet_b",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382426073:internet-gateway/igw-02b283948d2f11ba9",
            "id": "igw-02b283948d2f11ba9",
            "owner_id": "992382426073",
            "tags": {
              "Name": "MainIGW"
            },
            "tags_all": {
              "Name": "MainIGW"
            },
            "vpc_id": "vpc-0ccdb9db1af84d4c2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:992382426073:loadbalancer/app/web-alb/a659dd00d2ad26f2",
            "arn_suffix": "app/web-alb/a659dd00d2ad26f2",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "web-alb-1067174998.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:992382426073:loadbalancer/app/web-alb/a659dd00d2ad26f2",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "web-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-00fa8360e5aa9674c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03ec5277dda703ab1"
              },
              {
                "subnet_id": "subnet-0fde10caef6765bbb"
              }
            ],
            "subnets": [
              "subnet-03ec5277dda703ab1",
              "subnet-0fde10caef6765bbb"
            ],
            "tags": {
              "Name": "WebALB"
            },
            "tags_all": {
              "Name": "WebALB"
            },
            "vpc_id": "vpc-0ccdb9db1af84d4c2",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.example_sg",
            "aws_subnet.subnet_a",
            "aws_subnet.subnet_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:992382426073:listener/app/web-alb/a659dd00d2ad26f2/1fe41ca363534ab1",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:992382426073:targetgroup/web-target-group/12a40e916f55f50b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:992382426073:listener/app/web-alb/a659dd00d2ad26f2/1fe41ca363534ab1",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:992382426073:loadbalancer/app/web-alb/a659dd00d2ad26f2",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.example",
            "aws_lb_target_group.example",
            "aws_security_group.example_sg",
            "aws_subnet.subnet_a",
            "aws_subnet.subnet_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:992382426073:targetgroup/web-target-group/12a40e916f55f50b",
            "arn_suffix": "targetgroup/web-target-group/12a40e916f55f50b",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:992382426073:targetgroup/web-target-group/12a40e916f55f50b",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:992382426073:loadbalancer/app/web-alb/a659dd00d2ad26f2"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "web-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ccdb9db1af84d4c2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:992382426073:targetgroup/web-target-group/12a40e916f55f50b-20250430022857540300000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:992382426073:targetgroup/web-target-group/12a40e916f55f50b",
            "target_id": "i-08b341486d50c02d1"
          },
          "dependencies": [
            "aws_instance.example",
            "aws_lb_target_group.example",
            "aws_security_group.example_sg",
            "aws_subnet.subnet_a",
            "aws_subnet.subnet_b",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:992382426073:targetgroup/web-target-group/12a40e916f55f50b-20250430024210486700000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:992382426073:targetgroup/web-target-group/12a40e916f55f50b",
            "target_id": "i-0d6c74acadf71ef0c"
          },
          "dependencies": [
            "aws_instance.example",
            "aws_lb_target_group.example",
            "aws_security_group.example_sg",
            "aws_subnet.subnet_a",
            "aws_subnet.subnet_b",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382426073:route-table/rtb-014bb22bf460a3f8e",
            "id": "rtb-014bb22bf460a3f8e",
            "owner_id": "992382426073",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02b283948d2f11ba9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PublicRoute"
            },
            "tags_all": {
              "Name": "PublicRoute"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ccdb9db1af84d4c2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03d052f69dd424ebe",
            "route_table_id": "rtb-014bb22bf460a3f8e",
            "subnet_id": "subnet-0fde10caef6765bbb"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.subnet_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d1d0b8d0efcc8345",
            "route_table_id": "rtb-014bb22bf460a3f8e",
            "subnet_id": "subnet-03ec5277dda703ab1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.subnet_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382426073:security-group/sg-04fec202c81aff0a3",
            "description": "Allow access to RDS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04fec202c81aff0a3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "allow_rds",
            "name_prefix": "",
            "owner_id": "992382426073",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ccdb9db1af84d4c2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "example_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382426073:security-group/sg-00fa8360e5aa9674c",
            "description": "Allow SSH and HTTP traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00fa8360e5aa9674c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "example_sg",
            "name_prefix": "",
            "owner_id": "992382426073",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ccdb9db1af84d4c2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382426073:subnet/subnet-0fde10caef6765bbb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fde10caef6765bbb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "992382426073",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SubnetA"
            },
            "tags_all": {
              "Name": "SubnetA"
            },
            "vpc_id": "vpc-0ccdb9db1af84d4c2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382426073:subnet/subnet-03ec5277dda703ab1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03ec5277dda703ab1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "992382426073",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SubnetB"
            },
            "tags_all": {
              "Name": "SubnetB"
            },
            "vpc_id": "vpc-0ccdb9db1af84d4c2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382426073:vpc/vpc-0ccdb9db1af84d4c2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08a65cd83da1f6239",
            "default_route_table_id": "rtb-0416c17a5f9f709a6",
            "default_security_group_id": "sg-03c339e2f95a79c3f",
            "dhcp_options_id": "dopt-0e811b1c7d8d95dd8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ccdb9db1af84d4c2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0416c17a5f9f709a6",
            "owner_id": "992382426073",
            "tags": {
              "Name": "MainVPC"
            },
            "tags_all": {
              "Name": "MainVPC"
            }
          }
        }
      ]
    }
  ]
}